Update theme to 4.1.0

--- a/package.json
+++ b/package.json
@@ -1,25 +1,76 @@
 {
-  "name": "themosis-theme",
-  "version": "2.0.0",
+  "name": "@digital-brew/themosis",
+  "version": "4.1.0",
   "description": "Themosis framework boilerplate theme.",
+  "private": true,
+  "browserslist": [
+    "extends @wordpress/browserslist-config"
+  ],
+  "type": "module",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "hot": "cross-env NODE_ENV=development webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "build": "mix",
+    "build:prod": "mix --production",
+    "watch": "mix watch",
+    "start": "mix watch",
+    "translate": "npm run translate:pot && npm run translate:js",
+    "translate:pot": "cd ./../../../../ && wp i18n make-pot . ./htdocs/content/themes/themosis/languages/themosis.pot --domain=themosis --include=\"app,config,routes,htdocs/content/themes/themosis/inc,htdocs/content/themes/themosis/config,htdocs/content/themes/themosis/resources,htdocs/content/themes/themosis/views,htdocs/content/themes/themosis/resources,htdocs/content/themes/themosis/dist/scripts,storage/framework/views/blade\" --exclude=\"vendor,htdocs/content/themes/themosis/node_modules,htdocs/content/themes/themosis/vendor\"",
+    "translate:remove-js-dir": "rm -rf ./languages/js",
+    "translate:js": "yarn translate:remove-js-dir && wp i18n make-json ./languages ./languages/js --no-purge --pretty-print && yarn translate:rename-files && yarn translate:update-files && yarn translate:remove-unused-files",
+    "translate:compile": "yarn translate:js && yarn translate:admin",
+    "translate:mo": "wp i18n make-mo ./languages ./languages",
+    "translate:admin": "cp -Rf ./languages/pl_PL.po ./../../languages/plugins/themosis-pl_PL.po && cp -Rf ./languages/pl_PL.mo ./../../languages/plugins/themosis-pl_PL.mo && cp -Rf ./languages/js/themosis-pl_PL-theme.json ./../../languages/plugins/themosis-pl_PL-theme.json",
+    "translate:rename-files": "cd ./languages/js && mv $(ls | sort -V -r | tail -n 1) themosis-pl_PL-theme.json",
+    "translate:update-files": "sed -i -e 's/messages/themosis/g' ./languages/js/themosis-pl_PL-theme.json",
+    "translate:remove-unused-files": "cd ./languages/js && find . -name 'pl_PL*' -exec rm {} \\;"
   },
-  "author": "Themosis",
-  "license": "GPL-2.0-or-later",
-  "bugs": {
-    "url": "https://github.com/themosis/theme/issues"
-  },
-  "homepage": "https://github.com/themosis/theme#readme",
   "devDependencies": {
-    "cross-env": "^5.2.0",
-    "laravel-mix": "^4.0.0",
-    "resolve-url-loader": "2.3.1",
-    "sass": "^1.17.3",
-    "sass-loader": "7.*",
-    "vue-template-compiler": "^2.6.10"
+    "@alpinejs/collapse": "^3.12.3",
+    "@alpinejs/focus": "^3.14.1",
+    "@alpinejs/intersect": "^3.14.1",
+    "@alpinejs/morph": "^3.12.3",
+    "@alpinejs/persist": "^3.12.3",
+    "@alpinejs/ui": "^3.13.2-beta.1",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.17.12",
+    "@captaincss/captaincss": "^2.5.0",
+    "@rafflex/swipebox": "https://github.com/rafflex/swipebox",
+    "@splidejs/splide": "^4.1.4",
+    "@splidejs/splide-extension-auto-scroll": "^0.5.3",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/line-clamp": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.9",
+    "@tinypixelco/laravel-mix-wp-blocks": "https://github.com/rafflex/laravel-mix-wp-blocks",
+    "@wordpress/babel-preset-default": "^6.11.0",
+    "@wordpress/block-editor": "^9.1.0",
+    "@wordpress/blocks": "^11.8.0",
+    "@wordpress/browserslist-config": "^4.1.2",
+    "@wordpress/components": "^19.11.0",
+    "@wordpress/dependency-extraction-webpack-plugin": "^3.5.0",
+    "@wordpress/element": "^4.7.0",
+    "@wordpress/i18n": "^4.11.0",
+    "@wordpress/icons": "^9.0.0",
+    "alpinejs": "^3.12.3",
+    "alpinejs-head": "^1.1.2",
+    "async-alpine": "^1.2.2",
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "browser-sync": "^2.26.14",
+    "browser-sync-webpack-plugin": "^2.3.0",
+    "cookies-utils": "^1.0.0",
+    "eslint": "^7.27.0",
+    "eslint-plugin-import": "^2.23.3",
+    "jquery": "^3.7.0",
+    "laravel-mix": "^6.0.19",
+    "postcss": "^8.3.5",
+    "postcss-custom-properties": "^12.1.7",
+    "postcss-each": "^1.1.0",
+    "postcss-import": "^14.1.0",
+    "sass": "^1.52.2",
+    "sass-loader": "^13.0.0",
+    "slim-select": "^1.27.0",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^20.0.0",
+    "tailwind-bootstrap-grid": "^5.0.1",
+    "tailwindcss": "^3.3.2"
   }
 }
