--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,12 @@
   ],
   "type": "wordpress-theme",
   "require": {
-    "php": ">=7.1.0",
-    "composer/installers" : "~1.2"
+    "php": "^8.1",
+    "composer/installers" : "^2.2"
+  },
+  "config": {
+    "allow-plugins": {
+      "composer/installers": true
+    }
   }
 }
